使用纯色背景和游戏界面预览替换俄罗斯方块项目图片

--- a/index.html
+++ b/index.html
@@ -60,6 +60,30 @@
             object-fit: cover;
         }
 
+        .tetris-preview {
+            width: 100%;
+            height: 200px;
+            background: #1a1a1a;
+            display: grid;
+            grid-template-columns: repeat(10, 1fr);
+            grid-template-rows: repeat(20, 1fr);
+            gap: 1px;
+            padding: 10px;
+        }
+
+        .tetris-cell {
+            background: #333;
+            border-radius: 2px;
+        }
+
+        .tetris-cell.I { background: #00BCD4; }
+        .tetris-cell.O { background: #FFC107; }
+        .tetris-cell.T { background: #9C27B0; }
+        .tetris-cell.S { background: #4CAF50; }
+        .tetris-cell.Z { background: #F44336; }
+        .tetris-cell.J { background: #2196F3; }
+        .tetris-cell.L { background: #FF9800; }
+
         .project-content {
             padding: 20px;
         }
@@ -107,7 +131,27 @@
 
         <div class="projects-grid">
             <div class="project-card">
-                <img src="https://images.unsplash.com/photo-1611095567218-8e4b0a5c8c3b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="俄罗斯方块" class="project-image">
+                <div class="tetris-preview">
+                    <div class="tetris-cell I"></div>
+                    <div class="tetris-cell I"></div>
+                    <div class="tetris-cell I"></div>
+                    <div class="tetris-cell I"></div>
+                    <div class="tetris-cell O"></div>
+                    <div class="tetris-cell O"></div>
+                    <div class="tetris-cell O"></div>
+                    <div class="tetris-cell O"></div>
+                    <div class="tetris-cell T"></div>
+                    <div class="tetris-cell T"></div>
+                    <div class="tetris-cell T"></div>
+                    <div class="tetris-cell S"></div>
+                    <div class="tetris-cell S"></div>
+                    <div class="tetris-cell Z"></div>
+                    <div class="tetris-cell Z"></div>
+                    <div class="tetris-cell J"></div>
+                    <div class="tetris-cell J"></div>
+                    <div class="tetris-cell L"></div>
+                    <div class="tetris-cell L"></div>
+                </div>
                 <div class="project-content">
                     <h2 class="project-title">俄罗斯方块</h2>
                     <p class="project-description">经典的俄罗斯方块游戏，使用纯HTML、CSS和JavaScript实现。包含完整的游戏逻辑、分数系统和流畅的动画效果。</p>
