--- a/lunch_lottery.html
+++ b/lunch_lottery.html
@@ -142,6 +142,20 @@
                 transform: translateY(100vh) rotate(360deg);
             }
         }
+        .back-to-home {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background: #3498db;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s ease;
+        }
+        .back-to-home:hover {
+            background: #2980b9;
+        }
     </style>
 </head>
 <body>
@@ -149,8 +163,11 @@
         <h1>今天午餐吃什么？</h1>
         <div class="result" id="result"></div>
         <div class="options" id="options"></div>
-        <button id="startBtn">开始抽取</button>
+        <div class="controls">
+            <button id="startBtn">开始抽取</button>
+        </div>
     </div>
+    <a href="index.html" class="back-to-home">返回主页</a>
 
     <script>
         const options = ['辣可可', '庭湘', '农耕记', '伟旺', '小女当家', '西北楼', '砂锅', '快餐'];
